@@ -1,6 +1,6 @@
 {
   "name": "simp-aide",
-  "version": "6.9.0",
+  "version": "6.10.0",
   "author": "SIMP Team",
   "summary": "manages AIDE",
   "license": "Apache-2.0",
@@ -14,7 +14,7 @@
   "dependencies": [
     {
       "name": "puppet/systemd",
-      "version_requirement": ">= 4.0.2 < 6.0.0"
+      "version_requirement": ">= 4.0.2 < 7.0.0"
     },
     {
       "name": "simp/simplib",
@@ -26,7 +26,7 @@
     },
     {
       "name": "puppetlabs/concat",
-      "version_requirement": ">= 6.4.0 < 8.0.0"
+      "version_requirement": ">= 6.4.0 < 10.0.0"
     }
   ],
   "simp": {
@@ -37,11 +37,11 @@
       },
       {
         "name": "simp/logrotate",
-        "version_requirement": ">= 6.1.0 < 7.0.0"
+        "version_requirement": ">= 6.5.0 < 7.0.0"
       },
       {
         "name": "simp/rsyslog",
-        "version_requirement": ">= 7.0.0 < 9.0.0"
+        "version_requirement": ">= 7.6.0 < 9.0.0"
       }
     ]
   },
@@ -83,7 +83,7 @@
   "requirements": [
     {
       "name": "puppet",
-      "version_requirement": ">= 6.22.1 < 8.0.0"
+      "version_requirement": ">= 7.0.0 < 9.0.0"
     }
   ]
 }
