@@ -97,7 +97,7 @@ RSpec.configure do |c|
   c.mock_with :mocha
 
   c.module_path = File.join(fixture_path, 'modules')
-  c.manifest_dir = File.join(fixture_path, 'manifests')
+  c.manifest_dir = File.join(fixture_path, 'manifests') if c.respond_to?(:manifest_dir)
 
   c.hiera_config = File.join(fixture_path,'hieradata','hiera.yaml')
 
